--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="albert.miguel.gooddriver">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
@@ -39,6 +38,10 @@
             </intent-filter>
         </activity>
         <receiver android:name=".AlarmReceiver"
+            android:exported="true"
+            android:permission="TODO">
+        </receiver>
+        <receiver android:name=".AlarmService"
             android:exported="true"
             android:permission="TODO">
         </receiver>
