--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,11 +48,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.google.android.gms:play-services-ads:20.6.0'
+    implementation 'com.google.android.gms:play-services-ads:21.0.0'
 
     implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
     //add library
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
+    // besoin ou pas ?
+    implementation "androidx.work:work-runtime:2.8.0-alpha02"
+
 }
