--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "albert.miguel.gooddriver"
         minSdk 21
         targetSdk 31
-        versionCode 10
-        versionName "1.010"
+        versionCode 17
+        versionName "1.017"
         vectorDrawables.useSupportLibrary = true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -36,6 +36,8 @@ android {
 
 dependencies {
 
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -59,5 +61,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
     // besoin ou pas ?
     implementation "androidx.work:work-runtime:2.8.0-alpha02"
+
+    implementation "com.google.android.play:core:1.10.3"
+
+    implementation "com.google.android.material:material:1.7.0-alpha02"
 
 }
